Fixing overflow to wrap

--- a/packages/dev/sharedUiComponents/src/nodeGraphSystem/graphFrame.module.scss
+++ b/packages/dev/sharedUiComponents/src/nodeGraphSystem/graphFrame.module.scss
@@ -32,9 +32,9 @@
 }
 
 .frame-comment-span {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    white-space: normal;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
 
 .selected.frame-box-border {
